tests/ui/derive/fail_ts_skip_serializing_if_missing_optional.stderr
error: `#[serde(skip_serializing_if)]` can omit this field at runtime; add `#[ts(optional)]` so generated TypeScript matches
 --> tests/ui/derive/fail_ts_skip_serializing_if_missing_optional.rs:5:5
  |
5 | /     #[serde(skip_serializing_if = "Option::is_none")]
6 | |     message: Option<String>,
  | |___________________________^
